<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.CadastroActivity">

    <Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop">

        <ImageView
            android:id="@+id/btn_retornar_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="#fff"
            app:srcCompat="@drawable/ic_arrow_back_gray24dp" />
    </Toolbar>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagemUsuario"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/padrao"
        app:civ_border_color="#DFDADA"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagemUsuario">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/campoNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_cds_nome"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/text_cds_email"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/campoEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/campoSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_cds_senha"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_edit_text"
        app:layout_constraintBottom_toTopOf="@+id/buttonCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/campoConfirmacaoSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_cds_confsenha"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="validarCadastro"
        android:text="@string/text_cds_botaocadas"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout10" />

    <ImageView
        android:id="@+id/iconeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout7"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout7"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout7"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout7"
        app:layout_constraintVertical_bias="0.437"
        app:srcCompat="@drawable/ic_account_circle_white_24dp" />

    <ImageView
        android:id="@+id/iconEmailCada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout8"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout8"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout8"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout8"
        app:layout_constraintVertical_bias="0.406"
        app:srcCompat="@drawable/ic_email_whie" />

    <ImageView
        android:id="@+id/iconeCadeado1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout9"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout9"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout9"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout9"
        app:layout_constraintVertical_bias="0.406"
        app:srcCompat="@drawable/ic_lock_white_24dp" />

    <ImageView
        android:id="@+id/iconeCadeado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout10"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout10"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout10"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout10"
        app:layout_constraintVertical_bias="0.583"
        app:srcCompat="@drawable/ic_lock_white_24dp" />

</android.support.constraint.ConstraintLayout>
</ScrollView>